Added Comparator class for Dependency

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         >
-        <activity android:name=".SplashActivity"/>
+        <activity android:name=".ui.splash.SplashActivity"/>
         <activity
             android:name=".ui.login.LoginViewImpl"
             android:theme="@style/LoginTheme"
@@ -28,8 +28,8 @@
         <activity android:name=".ui.product.ProductActivity"/>
         <activity android:name=".ui.dependency.DependencyActivity"/>
         <activity android:name=".ui.sector.SectorActivity"/>
-        <activity android:name=".GeneralSettingsActivity"/>
-        <activity android:name=".AccountSettingsActivity"/>
+        <activity android:name=".ui.settings.GeneralSettingsActivity"/>
+        <activity android:name=".ui.settings.AccountSettingsActivity"/>
         <activity android:name=".ui.about.AboutActivity"/>
         <activity android:name=".ui.dependency.AddDependencyActivity">
         </activity>
